20/2/2015

- Added new attribute 'type=veth|ovs-patch' to <connection> tag to allow defining if the connection between two open vswitch is 
  made using ovs patch ports or veth interfaces. Ej:
    
    <connection name='linksw1sw0' net='Net0' type="ovs-patch"/>
- Added new attribute 'hwaddr' to <net> tag for openvswitch based networks to allow defining the bridge MAC address.
  Ej: 
      <net name="Net0" mode="openvswitch" hwaddr="00:00:00:00:00:01" ...
      
  To manually check the hw address configured in a openvswitch use: ovs-vsctl get bridge Net0 other-config:hwaddr 
  To manually set the hw address to an openvswitch use: ovs-vsctl set bridge Net0 other-config:hwaddr=00:00:00:00:00:01 

- Command used to tell network manager not to manage veth interfaces changed to:
    nmcli dev disconnect iface ${vm_name}-e${id}
  to test if the problems with management interfaces are solved. 
   

12/02/2015

- Change in modify-rootfs for LXC: if the lxc.rootfs and lxc.mount entries in config file point to a directory 
  different form the one where the rootfs is, a new temporal config file is created automatilly to modify the 
  rootfs.  
- Modified autoconfigure_redhat routine to: correctly associate IP routes to interfaces and implement dhcp interfaces.
- Moved all autoconfigure_* functions to vnx_autoconfigure.pl file which unifies the code duplicated in vmAPI_Common and vnxaced.pl
- New rough prototype of an utility to package examples: vnx_pack_scenario   

12/01/2015

- vnx.conf: allowed to include $USER in vnx_dir specification, to allow using a different directory for each user. 
- dynamips: bug that prevented the connection of dynamips router interfaces to openvswitches corrected 
- vmAPICommon: eliminated delay in open_console when no config for the window was specified
- create_bridges_for_virtual_bridged_networks: when creating a VLAN subinterface sometimes the naming schema could 